# ClawMemory

./: README.md  RELEASE_CHECKLIST_v0.1.0.md  RELEASE_NOTES_v0.1.0.md  index.js  openclaw.plugin.json  package.json  plugin.json  pyproject.toml
clawmemory/: __init__.py  autocapture.py  cli.py  commitments.py  contract.py  dashboard.py  distill.py  integrations.py  metrics.py  openclaw_bridge.py  session_buffer.py  store.py  tools.py  tui_utils.py  vector_semantic.py
clawmemory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: conversation.json
memory/: MEMORY.md  commitments.sqlite3  index.sqlite3  profile.md
skills/clawmemory/: SKILL.md
tests/: test_autocapture.py  test_commitments.py  test_dashboard.py  test_integrations.py  test_openclaw_bridge.py  test_phase2.py  test_tools.py
ui/clawmemory-next/: package.json  tailwind.config.ts
ui/clawmemory-next/app/: globals.css  layout.tsx  page.tsx
ui/clawmemory-next/components/: card.tsx
