[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawmemory"
version = "0.1.0"
description = "Local-first memory layer for OpenKrab/OpenClaw-style agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nattapong" }]
dependencies = [
  "rich>=13.0"
]

[tool.setuptools]
packages = ["clawmemory"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
vector = [
  "chromadb>=0.5.0",
  "sentence-transformers>=3.0.0"
]

[project.scripts]
clawmemory = "clawmemory.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
